<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryDark"
    android:id="@+id/widget_translator"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:padding="@dimen/widget_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/widget_translator_search_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:contentDescription="@string/Translator_Search_Icon"
            android:src="@android:drawable/ic_menu_search" />

        <TextView
            android:id="@+id/widget_translator_search_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical"
            android:background="@color/cardview_light_background"
            android:text="@string/search_translate_hint"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/cardview_light_background"
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/widget_phrases_list_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:textSize="20sp"
            tools:text="Hi" />

        <TextView
            android:id="@+id/widget_phrases_romaji_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="8dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            tools:text="Konnichiwa" />

        <ImageButton
            android:id="@+id/widget_favorite_image_button"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/favorite_button_content_description"
            tools:src="@drawable/ic_favorite" />
    </LinearLayout>


</LinearLayout>